--- a/openci-platform-web/src/main/webapp/css/main.css
+++ b/openci-platform-web/src/main/webapp/css/main.css
@@ -17,8 +17,8 @@ a, button {
 
 .g-header .navbar-brand, .g-header .navbar-brand:hover, .g-header .navbar-brand:focus {
 	color: #FFFFFF;
+	font-size: 1.2em;
 	font-size: 1.2rem;
-	font-size/*\**/: 16px\9;
 }
 
 .g-header .navbar-brand img {
@@ -50,8 +50,8 @@ a, button {
 }
 
 .g-main .nav-header {
+	font-size: 1.2em;
 	font-size: 1.2rem;
-	font-size/*\**/: 16px\9;
 	position: relative;
 	left: 12px;
 	top: -6px;
@@ -92,8 +92,8 @@ a, button {
 }
 
 .g-main .breadcrumb li {
+	font-size: 1.2em;
 	font-size: 1.2rem;
-	font-size/*\**/: 16px\9;
 }
 
 .g-main .u-project-list {
@@ -181,11 +181,6 @@ a, button {
 	color: red;
 }
 
-
-.select-people .modal-dialog {
-   width: 900px;
-}
-
 .modual .modal-dialog {
 	width: 1100px;	
 }
@@ -217,12 +212,8 @@ a, button {
 	padding-top: 10px;
 }
 
-.select-developer .grid-table-body {
-	height: 210px!important;
-}
-
 .select-tools .grid-table-body {
-	height: 290px!important;
+	height: 265px!important;
 }
 
 .select-tools .checker {
@@ -231,6 +222,14 @@ a, button {
 
 .select-tools .form-control {
 	max-width: 320px;
+}
+
+.select-developer .modal-dialog {
+   width: 900px;
+}
+
+.select-developer .grid-table-body {
+	height:240px!important; 
 }
 
 .tool-manage .form-control {
@@ -256,6 +255,6 @@ a, button {
 }
 
 .g-footer span {
+	font-size: 1.4em;
 	font-size: 1.4rem;
-	font-size/*\**/: 18px\9;
 }
