添加子系统参数

--- a/openci-platform-web/src/main/webapp/css/main.css
+++ b/openci-platform-web/src/main/webapp/css/main.css
@@ -3,7 +3,12 @@ a, button {
 	text-decoration: none;
 	cursor: pointer;
 }
-
+.content {
+	padding-left: 15px;
+	padding-right: 15px;
+	margin-left: auto;
+	margin-right: auto;
+}
 .g-header {
 	background-color: #3F9FD9;
 }
