--- a/openci-platform-web/src/main/webapp/css/main.css
+++ b/openci-platform-web/src/main/webapp/css/main.css
@@ -1,9 +1,19 @@
+@media (max-width: 1366px) {
+	html, body {
+		font-size: 12px!important;
+	}
+}
 a, button {
 	outline: none !important;
 	text-decoration: none;
 	cursor: pointer;
 }
-
+.content {
+	padding-left: 25px;
+	padding-right: 25px;
+	margin-left: auto;
+	margin-right: auto;
+}
 .g-header {
 	background-color: #3F9FD9;
 }
