--- a/openci-platform-web/src/main/webapp/css/koala_wizard.css
+++ b/openci-platform-web/src/main/webapp/css/koala_wizard.css
@@ -2,7 +2,7 @@
 .wizard {
 	border:1px solid #d4d4d4;
 	font-size:14px;
-	height:510px;
+	height:460px;
 	margin:20px auto 0;
 	overflow:hidden;
 	position:relative;
@@ -18,6 +18,7 @@
 .wizard  > ul > li >a{
   	font-size: 1.2em;
   	font-size: 1.2rem;
+  	padding: 7px 15px;
 }
 .wizard .items{
 	clear:both; 
@@ -25,18 +26,18 @@
 }
 
 .wizard .items .page{
-	padding:10px 15px;
-	height:480px;
+	padding:20px 15px 10px;
+	height:420px;
 	width: 20%;
 	float:left;
 }
 .wizard .page .grid-table-body {
-	height: 265px;
+	height: 265px!important;
 }
 
 .wizard .items .page .btn_nav{
 	height:36px; 
 	line-height:36px; 
-	margin-top: 8%;
+	margin-top: 10%;
 	text-align: center;
 }
