--- a/openci-platform-web/src/main/webapp/css/main.css
+++ b/openci-platform-web/src/main/webapp/css/main.css
@@ -225,6 +225,15 @@ a, button {
     text-align: center;
 }
 
+.tools .panel {
+	float: left;
+	width: 48%;
+}
+
+.tools .panel:nth-child(2n+1) {
+	margin-right: 4%;
+}
+
 .wizard {
 	border:1px solid #d4d4d4;
 	font-size:14px;
