--- a/openci-platform-web/src/main/webapp/css/koala.css
+++ b/openci-platform-web/src/main/webapp/css/koala.css
@@ -1,6 +1,13 @@
 /*
  * 表格组件样式
  */
+.dropdown-menu>li>a:hover, 
+.dropdown-menu>li>a:focus {
+	color: #fff;
+	text-decoration: none;
+	background-color: #428bca;
+}
+
 .grid {
 	border-collapse: separate;
 }
@@ -27,6 +34,9 @@
 }
 .grid  .buttons, .grid .records {
 	float: left;
+}
+.grid .records .dropdown-menu {
+	min-width: 80px;
 }
 .grid  .search, .grid .pages {
 	float: right;
@@ -67,14 +77,12 @@
 }
 .grid-table-head table th {
 	position: relative;
-	background-color: #efefef;
 	background-image: -webkit-gradient(linear, 0 0%, 0 100%, from(#fdfdfd), to(#eaeaea));
 	background-image: -webkit-linear-gradient(top, #fdfdfd 0%, #eaeaea 100%);
 	background-image: -moz-linear-gradient(top, #fdfdfd 0%, #eaeaea 100%);
 	background-image: -ms-linear-gradient(top, #fdfdfd 0%, #eaeaea 100%);
 	background-image: -o-linear-gradient(top, #fdfdfd 0%, #eaeaea 100%);
 	background-image: linear-gradient(top, #fdfdfd 0%, #eaeaea 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#eaeaea',GradientType=0 );
 }
 .grid-table-head table th .colResize {
 	float: right;
@@ -105,7 +113,7 @@
 .grid-table-head  .sort span {
 	float: right;
 	position: relative;
-	top: 4px;
+	top: 1px;
 }
 .grid-table-head  th[class*="sorting-"] {
 	color: #269abc;
@@ -513,7 +521,7 @@ div.uploader input {
 
 .tree .tree-item {
 	position: relative;
-	width: 100%;
+	max-width: 200px;
 	height: 20px;
 	margin-top: 1px;
 	cursor: pointer;
@@ -550,8 +558,18 @@ div.uploader input {
 }
 
 @media (max-width: 1366px) {
-	.btn, .wizard, .dropdown-menu, .select, .tree .tree-folder-name {
+	.btn, .wizard, 
+	.dropdown-menu, 
+	.select, .tree 
+	.tree-folder-name, 
+	.tree .tree-item .tree-item-name {
 		font-size: 12px!important;
+	}
+	.tree .checkbox input {
+		height: 18px!important;
+	}
+	.tree .tree-folder .tree-folder-header i {
+		top: 1px!important;
 	}
 	.form-control {
 		height: 30px;
